Se refactoriza codigo