@@ -6,9 +6,7 @@ import co.edu.uco.estacionaplus.domain.dto.UserSummaryDTO;
 import co.edu.uco.estacionaplus.domain.dto.VehicleSummaryDTO;
 import co.edu.uco.estacionaplus.domain.service.serviceuser.ServiceGetUsers;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ServiceApplicationGetUsers
@@ -22,6 +20,6 @@ public class ServiceApplicationGetUsers
 
     public List<UserSummaryDTO> getAll()
     {
-        return this.serviceGetUsers.getAll().stream().map(user -> new UserSummaryDTO(user.getCode(), user.getNames(), user.getLastNames(), user.getIdentificationNumber(), user.getPhone(), user.getEmail(), new UserRoleSummaryDTO(user.getUserRole().getCode(), user.getUserRole().getName()), new VehicleSummaryDTO(user.getVehicle().getCode(), user.getVehicle().getLicense(), new TypeVehicleSummaryDTO(user.getVehicle().getTypeVehicle().getCode(), user.getVehicle().getTypeVehicle().getName())))).collect(Collectors.toList());
+        return this.serviceGetUsers.getAll().stream().map(user -> new UserSummaryDTO(user.getCode(), user.getNames(), user.getLastNames(), user.getIdentificationNumber(), user.getPhone(), user.getEmail(), new UserRoleSummaryDTO(user.getUserRole().getCode(), user.getUserRole().getName()), new VehicleSummaryDTO(user.getVehicle().getCode(), user.getVehicle().getLicense(), new TypeVehicleSummaryDTO(user.getVehicle().getTypeVehicle().getCode(), user.getVehicle().getTypeVehicle().getName())))).toList();
     }
 }
